# tirocinio

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: generator_config.py  products.json
flink/: Dockerfile
grafana/: dashboard.json
scripts/: event_generator.py  generate_dashboard.py
sql/: flink_ddl.sql  flink_etl.sql  flink_insert.sql  flink_test.sql  seed_dim_date.sql  seed_dim_product.sql  seed_dim_user.sql  star_schema.sql
src/consumers/: agg_sales_consumer.py  anomaly_consumer.py  fact_sales_consumer.py
src/etl/: agg_tables.sql  postgres_writer.py  pyflink_aggregation.py  pyflink_datastream_anomaly.py  pyflink_etl.py  sales_splitter.py
src/utils/: data_producer.py
tests/integration/: test_integration.py  test_system.py
tests/quality/: test_mutation.py  test_performance.py
tests/system/: conftest.py  test_etl_pipeline_system.py
tests/unit/: test_generator.py
tests/unit/etl/: test_sales_splitter.py  test_split_event_benchmark.py
