[project]
name = "tirocinio"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.23.0",
    "kafka-python>=3.0.4",
    "mutmut>=3.6.0",
    "numpy>=2.5.0",
    "pytest>=9.1.1",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
]

[tool.mutmut]
source_paths = ["scripts/"]
also_copy = ["config/"]

[tool.pytest.ini_options]
markers = [
    "mutation: mutation score test (esegue mutmut sul codice)",
]
